fix: heading and p name align

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header {
 
 .header-img-container > p {
     position: absolute;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-family: "Alkatra", Arial, Helvetica, sans-serif;
     font-weight: bolder;
     color: var(--gray);
@@ -188,7 +188,7 @@ footer {
 
     .header-img-container > p {
         white-space: nowrap;
-        top: 10%;
+        top: 8%;
         left: 75%;
         z-index: 1;
     }
@@ -243,12 +243,12 @@ footer {
 
     .header-img-container > p {
         top: 85%;
-        left: 8%;
+        left: 9.5%;
     }
 
     .about-me {                             /*  what role it does? */
         width: 500px;
-        transform: translate(-10%, -50%);
+        transform: translate(-10%, -49%);
     }
 
     .corner-sqr {
@@ -258,6 +258,6 @@ footer {
 
     .about-me-heading {
         text-align: right;
-        padding-right: 40%;
+        padding-right: 25%;
     }
 }
